--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="topNavigationSect fullWidth colorPink">
-      <div class="innerNav mainWidth"></div>
+
+<head>
+  <meta charset="utf-8">
+  <title>Template</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <!-- black line -->
+  <div class="topNavigationSect fullWidth colorBlack">
+    <div class="innerNav mainWidth">
+      <div class="innerLeft"><span> DrVersion un tema corporate in regalo:<span>http://t.co/SMPZGDnM</span> via <span>YIW</span></span></div>
+      <div class="innerRight">
+      <ul>
+        <li>
+          <span>Top bar menu</span>
+        </li>
+        <li>
+
+          <span><i class="fa fa-envelope-o" aria-hidden="true"></i> Mail us</span>
+        </li>
+        <li>
+          <span style="border-right:none"><i class="fa fa-key" aria-hidden="true"></i>Log in</span>
+        </li>
+      </ul>
+    </div>
     </div>
 
-    <div class="verticalSpacer"></div>
-    <div class="sliderSect mainWidth colorGray">
-      <div class="newsSect colorWhite mainWidth"></div>
-      <div></div>
+  </div>
+  <!-- Main part -->
 
+  <div class="verticalSpacer"></div>
+  <!-- propuskaem mesto -->
+  <div class="sliderSect mainWidth colorGray">
+    <div>
+      
     </div>
 
-  </body>
+  </div>
+
+</body>
+
 </html>
